--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
     <header class="header_section">
       <div class="container" >
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
+          <img class="logo-nav" src="images/logo2.png" alt="">
           <a class="navbar-brand" href="index.html">
            <span>
               <span style="color: rgb(255, 255, 255);"> RED </span> BEE
