--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="author" content="" />
 
   <title>RED BEE</title>
+  <link rel="icon" href="images/logo2.png" type="image/x-icon">
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -36,6 +37,7 @@
     <header class="header_section">
       <div class="container" >
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
+          <img class="logo-nav" src="images/logo2.png" alt="">
           <a class="navbar-brand" href="index.html">
            <span>
               <span style="color: rgb(255, 255, 255);"> RED </span> BEE
@@ -136,7 +138,7 @@
                     <div class="col-md-6">
                       <div class="slider_img-box">
                         <div>
-                          <img src="images/slider-img.png" alt="" class="" />
+                          <img src="images/logo.jpg" alt="" class="" />
                         </div>
                       </div>
                     </div>
@@ -431,6 +433,7 @@
         
         </div>
       </div>
+      <br><br>
       <div class="row layout_padding2-top layout_padding-bottom">
         <div class="col-md-8">
           <div class="fruit_detail-box">
@@ -476,6 +479,7 @@
         </div>
        </div>
       </div>
+      <br><br>
       <div class="row layout_padding2-top layout_padding-bottom">
         <div class="col-md-8">
           <div class="fruit_detail-box">
@@ -522,6 +526,7 @@
         </div>
       </div>
     </div>
+    <br><br>
     <div class="row layout_padding2-top layout_padding-bottom">
       <div class="col-md-8">
         <div class="fruit_detail-box">
@@ -565,6 +570,8 @@
       </div>
     </div>
   </div>
+  <br>
+  <br>
   <div class="row layout_padding2-top layout_padding-bottom">
     <div class="col-md-8">
       <div class="fruit_detail-box">
@@ -611,6 +618,7 @@
     </div>
   </div>
 </div>
+<br><br>
 <div class="row layout_padding2-top layout_padding-bottom">
   <div class="col-md-8">
     <div class="fruit_detail-box">
@@ -654,7 +662,7 @@
   </div>
 </div>
 </div>
-
+<br><br>
 
     </div>
   </section>
