--- a/products.html
+++ b/products.html
@@ -121,7 +121,8 @@
               MENSTRUAL HEATING PAD / MASSAGER - for stomach cramps (period pain)
             </h3>
             <p class="mt-4 mb-5">
-              Get relief from period pain, menstrual cramps, and back pain with this top-quality heating massager featuring a digital display, 3 heat levels, and 4 massage modes. Designed to alleviate menstrual discomfort, it offers 3-speed quick heating and 4-speed vibration modes for customizable comfort. Made from soft, breathable fabric, the cordless heating pad fits all waistlines and displays settings on an LED screen. It’s portable, USB-rechargeable, and perfect for home, work, or on the go. An ideal gift for any woman, it comes in exquisite packaging. Warm Tips: For safety, the pad automatically shuts down if charging during use; this is normal.
+              Get relief from period pain, menstrual cramps, and back pain with this top-quality heating massager featuring a digital display, 3 heat levels, and 4 massage modes. Designed to alleviate menstrual discomfort, it offers 3-speed quick heating and 4-speed vibration modes for customizable comfort. Made from soft, breathable fabric, the cordless heating pad fits all waistlines and displays settings on an LED screen. It’s portable, USB-rechargeable, and perfect for home, work, or on the go. An ideal gift for any woman, it comes in exquisite packaging. 
+            
            
             </p>
             <a href="heatpad.html" class="text-uppercase custom_dark-btn">
@@ -267,7 +268,8 @@
               WATERPROOF FOLDABLE DUFFLE BAG (for women)
             </h3>
             <p class="mt-4 mb-5">
-              The Portable Large Capacity Folding Travel Bag folds to 11"(L) x 1.6"(W) x 7.1"(H) for easy packing and unfolds to a large capacity. It can be hand-carried, shoulder-carried, or attached to a suitcase. Made from lightweight, waterproof, and tear-resistant oxford fabric, it's durable and easy to clean. It features an internal waterproof compartment for valuables, keeping them dry even with wet clothes inside. Ideal for travel, weekend trips, and outdoor activities, it also serves as a gym or swimming bag. Suitable for all ages, it’s a perfect emergency backup bag. For any issues, contact us for timely resolution.
+              The Portable Large Capacity Folding Travel Bag folds to 11"(L) x 1.6"(W) x 7.1"(H) for easy packing and unfolds to a large capacity. It can be hand-carried, shoulder-carried, or attached to a suitcase. Made from lightweight, waterproof, and tear-resistant oxford fabric, it's durable and easy to clean. It features an internal waterproof compartment for valuables, keeping them dry even with wet clothes inside. Ideal for travel, weekend trips, and outdoor activities, it also serves as a gym or swimming bag.
+               Suitable for all ages, it’s a perfect emergency backup bag.
             </p>
             <div>
               <div class="price-box">
