--- a/policys.html
+++ b/policys.html
@@ -113,10 +113,8 @@
         <h1 style="color: red;">Refund Policy</h1>
         <p>We have a 7-day return policy, which means you have 7 days after receiving your item to request a return.</p>
         <p>To be eligible for a return, your item must be in the same condition that you received it, unworn or unused, with tags, and in its original packaging. You’ll also need the receipt or proof of purchase.</p>
-        <p>To start a return, you can contact us at <a href="mailto:redbeehomeshop@gmail.com">redbeehomeshop@gmail.com</a>. Please note that returns will need to be sent to the following address:</p>
-        <p>[RED BEE Home & Health Essentials, 68/1520, 2nd Floor, C.M Mathew Brothers Arcade, Near Westway Hotel, Chakkorathukulam, Calicut - 673006</p>
-        <p>If your return is accepted, we’ll send you a return shipping label, as well as instructions on how and where to send your package. Items sent back to us without first requesting a return will not be accepted.</p>
-        <p>You can always contact us for any return question at <a href="mailto:redbeehomeshop@gmail.com">redbeehomeshop@gmail.com</a>.</p>
+        <p>To return, you can contact us at <a href="https://wa.link/oa05y5">WhatsApp</a></p>
+     
         <h2>Damages and issues</h2>
         <p>Please inspect your order upon reception and contact us immediately if the item is defective, damaged or if you receive the wrong item, so that we can evaluate the issue and make it right. Please make a 360-degree video while opening for clarifications.</p>
         <h2>Exchanges</h2>
