--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <a class="nav-link" href="products.html"> Products</a>
                 </li>
                 <li class="nav-item">
-                   <a class="nav-link" href="#Bestseller"> Bestsellers </a>
+                   <a class="nav-link" href="index.html#Bestseller"> Bestsellers </a>
                 </li> 
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">About us</a>
