--- a/index.html
+++ b/index.html
@@ -366,14 +366,14 @@
     <div class="container">
       <br><br><br><br>
       <h2 class="custom_heading"><br>
-        Bestseller</h2>
+        Bestsellers</h2>
      
       <div class="row layout_padding2">
         <div class="col-md-8">
           <div class="fruit_detail-box">
-            <h3>
+            <h5>
               MENSTRUAL HEATING PAD / MASSAGER - for stomach cramps (period pain)
-            </h3>
+            </h5>
             <p class="mt-4 mb-5">
               Get relief from period pain, menstrual cramps, and back pain with this top-quality heating massager featuring a digital display, 3 heat levels, and 4 massage modes. Designed to alleviate menstrual discomfort, it offers 3-speed quick heating and 4-speed vibration modes for customizable comfort. Made from soft, breathable fabric, the cordless heating pad fits all waistlines and displays settings on an LED screen. It’s portable, USB-rechargeable, and perfect for home, work, or on the go. An ideal gift for any woman, it comes in exquisite packaging. Warm Tips: For safety, the pad automatically shuts down if charging during use; this is normal.
             </p>
@@ -431,9 +431,9 @@
       <div class="row layout_padding2-top layout_padding-bottom">
         <div class="col-md-8">
           <div class="fruit_detail-box">
-            <h3>
+            <h5>
               ASTRONAUT GALAXY PROJECTOR (for kids bedroom)
-            </h3>
+            </h5>
             <p class="mt-4 mb-5">
               Experience an out-of-this-world journey with the Astronaut Galaxy Projector, creating a celestial atmosphere with stars, planets, and nebulae. This projector offers colorful, unpredictable nebulae and twinkling stars, switchable via remote control or buttons. The astronaut design features a 360° rotatable head and movable arms for versatile projection and decoration. With remote control and timer functions, adjust color, brightness, and flashing frequency for convenience, especially at bedtime. Ideal as a night light, room decor, or in various settings, it stimulates curiosity and imagination. Perfect as a gift for children, friends, and family, it ensures a relaxing and stress-free night.
             </p>
@@ -477,9 +477,9 @@
       <div class="row layout_padding2-top layout_padding-bottom">
         <div class="col-md-8">
           <div class="fruit_detail-box">
-            <h3>
+            <h5>
               MINI BLUETOOTH SPEAKER WITH KARAOKE MIC (for home / office party)
-            </h3>
+            </h5>
             <p class="mt-4 mb-5">
               Introducing our Mini Portable Karaoke Speaker with Wireless Mic, your ultimate companion for karaoke parties on the go. Connect via Bluetooth V5.1 to your phone or tablet and access a vast song library for endless fun with friends and family. With vibrant RGB color-changing lights, create the perfect party ambiance. Experience rich 6W sound quality with balanced bass, midranges, and highs for exceptional audio immersion. Explore voice-changing effects like never before, from female to monster voices, enhancing the party vibe. This speaker makes a fantastic gift for any occasion, ensuring everywhere is a stage for joyous karaoke moments. Package includes speaker, wireless mic, manual, and C-type charging cable.            </p>
             <div>
@@ -525,9 +525,9 @@
     <div class="row layout_padding2-top layout_padding-bottom">
       <div class="col-md-8">
         <div class="fruit_detail-box">
-          <h3>
+          <h5>
             LED SOLAR FIREFLY LIGHTS (for garden / patio / lawn pathway) (pack of 2)
-          </h3>
+          </h5>
           <p class="mt-4 mb-5">
             Introducing our 8 LED Solar Firefly Lights, a pack of 2 enchanting outdoor lights designed to enhance your garden ambiance. These solar-powered Firefly lights come with a color box for easy storage and gifting. Waterproof and durable, they are perfect for outdoor use, adding a touch of magic to your garden. With their starburst swaying design, they create a captivating visual effect, making them ideal for garden decor. Illuminate your outdoor space with these whimsical and stylish lights, adding charm and beauty to your garden nights.            </p>
           <div>
@@ -571,9 +571,9 @@
   <div class="row layout_padding2-top layout_padding-bottom">
     <div class="col-md-8">
       <div class="fruit_detail-box">
-        <h3>
+        <h5>
           WIRELESS EMS FOOT MASSAGER (For pain relief)
-        </h3>
+        </h5>
         <p class="mt-4 mb-5">
           Introducing our Wireless EMS Foot Massager, your portable solution for foot relaxation and pain relief. Utilizing EMS technology, it stimulates muscle contractions, promotes circulation, and alleviates tension. Customize your experience with multiple massage modes and adjustable intensity levels. Simply place your feet into the ergonomically designed foot chambers, select your desired settings, and enjoy. Portable and folding for easy storage and transportation, it's perfect for home, office, or travel use. Treat yourself to gentle vibrations, soothing heat, and rejuvenating massages wherever you go with our USB rechargeable foot massager.            </p>
         <div>
@@ -619,9 +619,9 @@
 <div class="row layout_padding2-top layout_padding-bottom">
   <div class="col-md-8">
     <div class="fruit_detail-box">
-      <h3>
+      <h5>
         PORTABLE RECHARGEABLE MINI AIR COOLER (for home, office, outdoor camping)
-      </h3>
+      </h5>
       <p class="mt-4 mb-5">
         Introducing our Portable Air Cooler, a versatile 4-in-1 solution for ultimate cooling comfort. This Arctic cooler serves as an air cooler, humidifier, purifier, and aroma diffuser, ensuring a refreshing environment. With 3 speed settings and 5 sprays, it offers customizable cooling, while the 7 LED colors set the mood perfectly. Easy to use and safe, simply add water or ice and plug in the USB cable for instant cooling relief. Energy-efficient and eco-friendly, it operates at low power consumption, minimizing environmental impact. Enjoy clean and refreshing air with this mini AC, perfect for home, office, kitchen, or outdoor camping. Gift your loved ones the joy of staying cool and refreshed this summer.            </p>
       <div>
@@ -675,7 +675,7 @@
 
   <section class="client_section layout_padding">
     <div class="container">
-      <h2 class="custom_heading">Testimonial</h2>
+      <h2 class="custom_heading">Testimonials</h2>
       
       <div>
         <div id="carouselExampleControls-2" class="carousel slide" data-ride="carousel">
