--- a/policys.html
+++ b/policys.html
@@ -119,7 +119,7 @@
         <h1 style="color: red;">Refund Policy</h1>
         <p>We have a 7-day return policy, which means you have 7 days after receiving your item to request a return.</p>
         <p>To be eligible for a return, your item must be in the same condition that you received it, unworn or unused, with tags, and in its original packaging. You’ll also need the receipt or proof of purchase.</p>
-        <p>To return, you can contact us at <a href="https://wa.link/oa05y5">WhatsApp</a></p>
+        <p>For returns, you can contact us via <a href="https://wa.link/oa05y5">WhatsApp</a></p>
      
         <h2>Damages and issues</h2>
         <p>Please inspect your order upon reception and contact us immediately if the item is defective, damaged or if you receive the wrong item, so that we can evaluate the issue and make it right. Please make a 360-degree video while opening for clarifications.</p>
