--- a/heatpad.html
+++ b/heatpad.html
@@ -303,6 +303,8 @@
       <a href="https://www.facebook.com/share/MLJAuD54pnQfWde3/?mibextid=qi2Omg" target="_blank" class="social-icon facebook">
           <img src="images/fb.png" alt="Facebook">
       </a>
+      <a href="https://wa.link/oa05y5" target="_blank" class="social-icon WhatsApp">
+        <img src="images/wa.png" alt="whatsapp">
       <a href="mailto:redbeehomeshop@gmail.com" class="social-icon gmail">
           <img src="images/gmail.png" alt="Gmail">
       </a>
