--- a/policys.html
+++ b/policys.html
@@ -303,6 +303,9 @@
         Delivery partners attempt three deliveries before returning packages to the warehouse. Providing a mobile number facilitates faster delivery.
     </p>
 </div>
+<a href="https://wa.link/oa05y5" class="whatsapp-float" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp Icon" class="whatsapp-icon">
+</a>
 
 
   <!-- end contact section -->
