--- a/products.html
+++ b/products.html
@@ -1235,6 +1235,9 @@
     </div>
     </div>
   </section>
+  <a href="https://wa.link/oa05y5" class="whatsapp-float" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp Icon" class="whatsapp-icon">
+</a>
 
   <!-- end fruits section -->
 
