--- a/heatpad.html
+++ b/heatpad.html
@@ -13,6 +13,7 @@
   <meta name="author" content="" />
 
   <title>RED BEE</title>
+  <link rel="icon" href="images/logo2.png" type="image/x-icon">
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -27,6 +28,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
@@ -110,6 +112,18 @@
 
   <!-- service section -->
    <br><br><br><br>
+   <div class="overlay">
+    <lottie-player src="https://lottie.host/49f5dfbb-701a-408e-827b-d7ab03a51a6a/ZyU2YkiPA3.json" 
+                   background="##FFFFFF" 
+                   speed="1" 
+                   style="width: 600px; height: 600px" 
+                   
+                   
+                   autoplay 
+                   direction="1" 
+                   mode="normal">
+    </lottie-player>
+</div>
 
   <section class="service_section layout_padding ">
     <div class="container">
