--- a/products.html
+++ b/products.html
@@ -13,6 +13,7 @@
   <meta name="author" content="" />
 
   <title>RED BEE</title>
+  <link rel="icon" href="images/logo2.png" type="image/x-icon">
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -27,6 +28,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
@@ -43,9 +45,9 @@
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
@@ -116,6 +118,18 @@
    <br>
    <br>
    <br><br>
+   <div class="overlay">
+    <lottie-player src="https://lottie.host/49f5dfbb-701a-408e-827b-d7ab03a51a6a/ZyU2YkiPA3.json" 
+                   background="##FFFFFF" 
+                   speed="1" 
+                   style="width: 600px; height: 600px" 
+                   
+                   
+                   autoplay 
+                   direction="1" 
+                   mode="normal">
+    </lottie-player>
+</div>
 
   <section class="fruit_section layout_padding-top">
     <div class="container">
@@ -1272,7 +1286,8 @@
     </p>
   </section>
   <!-- footer section -->
-
+  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.js"></script>
  
 </body>
 
