--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
   <meta name="author" content="" />
 
   <title>RED BEE</title>
+  <link rel="icon" href="images/logo2.png" type="image/x-icon">
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -27,6 +28,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
@@ -107,9 +109,20 @@
     </div>
     </header>
     <!-- end header section -->
-
   
   <br><br><br><br><br><br><br>
+  <div class="overlay">
+    <lottie-player src="https://lottie.host/49f5dfbb-701a-408e-827b-d7ab03a51a6a/ZyU2YkiPA3.json" 
+                   background="##FFFFFF" 
+                   speed="1" 
+                   style="width: 600px; height: 600px" 
+                   
+                   
+                   autoplay 
+                   direction="1" 
+                   mode="normal">
+    </lottie-player>
+</div>
 
   <div class="container">
     <h1 style="color: red;">About Us</h1>
