--- a/policys.html
+++ b/policys.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
 
   <title>RED BEE</title>
-
+  <link rel="icon" href="images/logo2.png" type="image/x-icon">
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -27,6 +27,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
@@ -113,6 +114,18 @@
 
 
   <!-- contact section -->
+  <div class="overlay">
+    <lottie-player src="https://lottie.host/49f5dfbb-701a-408e-827b-d7ab03a51a6a/ZyU2YkiPA3.json" 
+                   background="##FFFFFF" 
+                   speed="1" 
+                   style="width: 600px; height: 600px" 
+                   
+                   
+                   autoplay 
+                   direction="1" 
+                   mode="normal">
+    </lottie-player>
+</div>
    
   <div class="container" style="margin-top: 200px;">
     <div class="content">
