--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
   <div class="container">
     <h1 style="color: red;">About Us</h1>
     <p>Welcome to RED BEE – Home & Health Essentials!</p>
-    <p>At RED BEE, our top priority is "Customer Delight." We strive to bring you unique, top-quality home essentials and health-related products that are essential for your daily life. Each product in our collection is carefully selected and imported from China, ensuring the highest standards of quality.</p>
+    <p>At RED BEE, our top priority is "Customer Delight." We strive to bring you unique, top-quality home and health-related products that are essential for daily life. Each product in our collection is carefully selected and imported from China, ensuring the highest standards of quality.</p>
     <p>Our journey from humble beginnings to where we are now has been fueled by our commitment to exceptional customer service. We believe that our growth is a testament to the satisfaction of our customers.</p>
     <h2 style="color: red;">Why Choose RED BEE?</h2>
     <p><strong>Hand-Picked Quality:</strong> We offer only the best products, meticulously chosen for their quality and utility.</p>
