--- a/products.html
+++ b/products.html
@@ -1259,7 +1259,7 @@
  
   <section class="info_section layout_padding">
     <div class="social-media-box">
-      <a href="https://www.instagram.com/redbeehomeshop?utm_source=qr&igsh=Nzdtd3R1d2xiYTVm" target="_blank" class="social-icon instagram">
+      <a href="https://www.instagram.com/redbee.in?igsh=Nzdtd3R1d2xiYTVm" target="_blank" class="social-icon instagram">
           <img src="images/insta.png" alt="Instagram">
       </a>
       <a href="https://www.facebook.com/share/MLJAuD54pnQfWde3/?mibextid=qi2Omg" target="_blank" class="social-icon facebook">
